add folder and filem for the CMS

--- a/site/config.toml
+++ b/site/config.toml
@@ -14,3 +14,8 @@ title = "Tasty Licks"
     name = "Food"
     url  = "/food"
     weight = 2
+
+[[menu.main]]
+    name = "Menu"
+    url  = "/food/imperial-roll"
+    weight = 2
